--- a/최선화/assets/css/style.css
+++ b/최선화/assets/css/style.css
@@ -43,12 +43,6 @@
     justify-content: center;
     text-align: center;
     color: var(--blue);
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 1;
-    width: 100%;
-    height: 100vh;
 }
 
 #section1 .text > div:nth-child(1) {
@@ -77,81 +71,58 @@
 #section2 {
     width: 100%;
     height: 100vh;
-    margin-top: 100vh;
+    position: relative;
 }
 
-#section2 .circle1 {
+#section2 .circle {
     width: 30vw;
     height: 30vw;
-    background-color: var(--blue);
-    position: absolute;
-    border-radius: 50%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-
-#section2 .circle2 {
-    width: 30vw;
-    height: 30vw;
-    background-color: #5a57ff;
-    position: absolute;
-    border-radius: 50%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    mix-blend-mode: color-burn;
-}
-
-#section2 .circle3 {
-    width: 30vw;
-    height: 30vw;
-    background-color: var(--blue);
-    position: absolute;
-    border-radius: 50%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-
-#section2 .circle4 {
-    width: 30vw;
-    height: 30vw;
-    background-color: #5a57ff;
-    position: absolute;
-    border-radius: 50%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    mix-blend-mode: color-burn;
-}
-
-#section2 .circle5 {
-    width: 15vw;
-    height: 15vw;
-    background-color: #5a57ff;
-    position: absolute;
-    border-radius: 50%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    background-image: url(../img/face2.jpg);
-    background-size: cover;
-    overflow: hidden;
-}
-
-#section2 .circle5 .bg {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
     background-color: #0038e9;
-    opacity: 0.7;
+    border-radius: 50%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    margin: auto;
+}
+
+#section2 .circle.c1 {
+    transform: translate(-150%, -100%);
+}
+#section2 .circle.c2 {
+    transform: translate(150%, -100%);
+}
+#section2 .circle.c3 {
+    transform: translate(-100%, -100%);
+    width: 25vw;
+    height: 25vw;
+    background-color: #2052f5;
+}
+#section2 .circle.c4 {
+    transform: translate(100%, -100%);
+    width: 25vw;
+    height: 25vw;
+    background-color: #2052f5;
+}
+#section2 .circle.c5 {
+    background: url(../img/face.jpg) no-repeat;
+    background-size: cover;
+}
+#section2 .desc {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 50%;
+    transform: translate(-50%, 270%);
+    font-family: "ChosunNm";
+    text-align: center;
 }
 
 #section3 {
     width: 100%;
     height: 2000px;
     background-color: #000;
+    position: relative;
+    z-index: 2000;
 }
