--- a/박소현2/assets/css/style.css
+++ b/박소현2/assets/css/style.css
@@ -9,7 +9,7 @@
     font-weight: 900;
     font-size: 40px;
     line-height: 1;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
     margin-bottom: 20px;
 }
 .titleWrap p {
@@ -41,6 +41,7 @@
     left: 50%;
     bottom: 3vw;
     transform: translateX(-50%);
+    z-index: 4000;
 }
 .bottomWrap h3 {
     font-family: "Bodoni Moda SC";
@@ -49,6 +50,8 @@
     text-transform: uppercase;
     white-space: nowrap;
     letter-spacing: -0.3vw;
+    line-height: 0.85;
+    overflow: hidden;
 }
 
 @media (max-width: 1730px) {
@@ -219,4 +222,112 @@ p {
     left: 50%;
     bottom: 20px;
     transform: translatex(-50%);
+}
+
+/* section2 */
+#main {
+    position: relative;
+    z-index: 3000;
+}
+#main .profile {
+    width: 500px;
+    height: 660px;
+    /* background: #ccc; */
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#main .profile > div {
+    /* display: none; */
+}
+#main .profile .ab-Img1 {
+    z-index: 2000;
+    margin-bottom: 10vh;
+}
+#main .profile .ab-Img2 {
+    z-index: 1000;
+    width: 350px;
+    background-color: #ededed1d;
+    margin-bottom: 10vh;
+}
+#main .profile .ab-Img2 img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1000;
+}
+#main .profile .ab-Img3 {
+    z-index: 10000;
+    right: 30px;
+    top: 30px;
+}
+#main .profile .ab-Img9 {
+    z-index: 10000;
+    right: 10px;
+    top: 160px;
+}
+#main .profile .ab-Img10 {
+    z-index: 2000;
+    right: 80px;
+    top: 290px;
+}
+
+#main .profile .ab-Img1,
+#main .profile .ab-Img2,
+#main .profile .ab-Img3,
+#main .profile .ab-Img9,
+#main .profile .ab-Img10 {
+    position: absolute;
+    display: block;
+}
+
+:root {
+    --color: pink;
+    --blur-1-size: clamp(400px, 60vw, 60vw);
+    --blur-2-size: clamp(300px, 40vw, 40vw);
+    --blur-3-size: clamp(100px, 10vw, 10vw);
+    --blur-amount: clamp(40px, 5vw, 90px);
+}
+
+.blur {
+    position: absolute;
+    z-index: 1;
+    border-radius: 900px;
+    filter: blur(var(--blur-amount));
+    background: var(--color);
+}
+
+.blur:nth-child(1) {
+    height: var(--blur-1-size);
+    width: calc(var(--blur-1-size) * 1.1);
+}
+
+.blur:nth-child(2) {
+    filter: blur(var(--blur-amount)) hue-rotate(135deg) brightness(1.3);
+    height: var(--blur-2-size);
+    width: calc(var(--blur-2-size) * 0.75);
+    top: 20vh;
+    right: 20vh;
+}
+
+.blur:nth-child(3) {
+    filter: blur(var(--blur-amount)) hue-rotate(-135deg);
+    height: var(--blur-3-size);
+    width: calc(var(--blur-3-size) * 2);
+    bottom: 20vh;
+    left: 20vw;
+}
+.wrapper {
+    height: 480px;
+    background: #f4f4f4;
+    overflow: visible;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    overflow: hidden;
 }
