--- a/박정민/assets/css/reset.css
+++ b/박정민/assets/css/reset.css
@@ -72,10 +72,10 @@
     font-display: swap;
 }
 @font-face {
-    font-family: "SwisspoTrial-ThinTall";
-    src: url("../fonts/SwisspoTrial-ThinTall.woff2") format("woff2");
+    font-family: "SwisspoTrial-SemiCondMedTall";
+    src: url("../fonts/SwisspoTrial-SemiCondMedTall.woff2") format("woff2");
     font-weight: normal;
-    font-style: italic;
+    font-style: normal;
     font-display: swap;
 }
 
@@ -136,8 +136,8 @@ textarea {
     font-size: 16px;
     line-height: 1.4;
     color: #202020;
-    font-family: NexonLv1GothicLow, -apple-system, BlinkMacSystemFont, "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo",
-        sans-serif;
+    font-family: NexonLv1GothicLow, -apple-system, BlinkMacSystemFont, "Malgun Gothic", "맑은 고딕", helvetica,
+        "Apple SD Gothic Neo", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
