--- a/김혜지/assets/css/style2.css
+++ b/김혜지/assets/css/style2.css
@@ -89,7 +89,7 @@
     text-transform: uppercase;
     z-index: 1000;
     color: #f1574f;
-    -webkit-text-stroke: 2px #000;
+    -webkit-text-stroke: 2px #fff;
 }
 #section1 .sun {
     width: 450px;
@@ -135,8 +135,9 @@
 #section2 {
     background-color: #fcd8da;
     width: 100%;
-    height: 100vh;
-    padding-top: 40px;
+    height: 3000px;
+    padding-top: 80px;
+    position: relative;
 }
 #section2 > div {
     font-size: 10vw;
@@ -146,11 +147,140 @@
     text-transform: uppercase;
     margin-bottom: 10px;
     padding-top: 1vw;
+    padding-left: 1vw;
 }
-#section2 > div .box {
-    width: 400px;
-    height: 7.1vw;
+#section2 > div .box1 {
+    width: 24vw;
+    height: 7.5vw;
     margin: 0 10px;
     display: inline-block;
     background-color: #000;
+    text-align: center;
+    padding-top: 0.2vw;
+    color: #000;
+    border-radius: 10px;
+}
+#section2 > div .box2 {
+    width: 20vw;
+    height: 7.5vw;
+    margin: 0 10px;
+    display: inline-block;
+    background-color: #000;
+    text-align: center;
+    padding-top: 0.2vw;
+    color: #000;
+    border-radius: 10px;
+}
+#section2 > div .box3 {
+    width: 24vw;
+    height: 7.5vw;
+    margin: 0 10px;
+    display: inline-block;
+    background-color: #000;
+    text-align: center;
+    padding-top: 0.2vw;
+    color: #000;
+    border-radius: 10px;
+}
+#section2 > div .box4 {
+    width: 30vw;
+    height: 7.5vw;
+    margin: 0 10px;
+    display: inline-block;
+    background-color: #000;
+    text-align: center;
+    padding-top: 0.2vw;
+    color: #000;
+    border-radius: 10px;
+}
+
+#section2 .picture {
+    width: 30vw;
+    height: 30vw;
+    background-image: url(../img/hy.webp);
+    background-position: center top;
+    background-size: 100%;
+    margin: 0 auto;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+#section2 .picture h3 {
+    margin-bottom: -2vw;
+    font-family: "lotteriaChab";
+    text-transform: uppercase;
+    color: #f1574f;
+    -webkit-text-stroke: 2px #fff;
+    font-size: 8vw;
+}
+
+#section2 .desc {
+    font-family: "yache";
+    margin-top: 4vw;
+    text-align: center;
+    font-size: 26px;
+}
+
+#section2 .desc em {
+    position: relative;
+    z-index: 1;
+}
+
+#section2 .desc em::before {
+    content: "";
+    background-color: #f1574f80;
+    width: 100%;
+    height: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+    border-radius: 30px;
+}
+
+#scratch-card {
+    width: 400px;
+    height: 300px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 10px 20px 40px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    background-color: white;
+    background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 56 28" width="56" height="28"%3E%3Cpath fill="%239C92AC" fill-opacity="0.4" d="M56 26v2h-7.75c2.3-1.27 4.94-2 7.75-2zm-26 2a2 2 0 1 0-4 0h-4.09A25.98 25.98 0 0 0 0 16v-2c.67 0 1.34.02 2 .07V14a2 2 0 0 0-2-2v-2a4 4 0 0 1 3.98 3.6 28.09 28.09 0 0 1 2.8-3.86A8 8 0 0 0 0 6V4a9.99 9.99 0 0 1 8.17 4.23c.94-.95 1.96-1.83 3.03-2.63A13.98 13.98 0 0 0 0 0h7.75c2 1.1 3.73 2.63 5.1 4.45 1.12-.72 2.3-1.37 3.53-1.93A20.1 20.1 0 0 0 14.28 0h2.7c.45.56.88 1.14 1.29 1.74 1.3-.48 2.63-.87 4-1.15-.11-.2-.23-.4-.36-.59H26v.07a28.4 28.4 0 0 1 4 0V0h4.09l-.37.59c1.38.28 2.72.67 4.01 1.15.4-.6.84-1.18 1.3-1.74h2.69a20.1 20.1 0 0 0-2.1 2.52c1.23.56 2.41 1.2 3.54 1.93A16.08 16.08 0 0 1 48.25 0H56c-4.58 0-8.65 2.2-11.2 5.6 1.07.8 2.09 1.68 3.03 2.63A9.99 9.99 0 0 1 56 4v2a8 8 0 0 0-6.77 3.74c1.03 1.2 1.97 2.5 2.79 3.86A4 4 0 0 1 56 10v2a2 2 0 0 0-2 2.07 28.4 28.4 0 0 1 2-.07v2c-9.2 0-17.3 4.78-21.91 12H30zM7.75 28H0v-2c2.81 0 5.46.73 7.75 2zM56 20v2c-5.6 0-10.65 2.3-14.28 6h-2.7c4.04-4.89 10.15-8 16.98-8zm-39.03 8h-2.69C10.65 24.3 5.6 22 0 22v-2c6.83 0 12.94 3.11 16.97 8zm15.01-.4a28.09 28.09 0 0 1 2.8-3.86 8 8 0 0 0-13.55 0c1.03 1.2 1.97 2.5 2.79 3.86a4 4 0 0 1 7.96 0zm14.29-11.86c1.3-.48 2.63-.87 4-1.15a25.99 25.99 0 0 0-44.55 0c1.38.28 2.72.67 4.01 1.15a21.98 21.98 0 0 1 36.54 0zm-5.43 2.71c1.13-.72 2.3-1.37 3.54-1.93a19.98 19.98 0 0 0-32.76 0c1.23.56 2.41 1.2 3.54 1.93a15.98 15.98 0 0 1 25.68 0zm-4.67 3.78c.94-.95 1.96-1.83 3.03-2.63a13.98 13.98 0 0 0-22.4 0c1.07.8 2.09 1.68 3.03 2.63a9.99 9.99 0 0 1 16.34 0z"%3E%3C/path%3E%3C/svg%3E');
+}
+
+#text-layer {
+    font-family: "Inconsolata", Arial, Helvetica, sans-serif;
+    position: absolute;
+    top: 100px;
+    left: 200px;
+    transform: translate(-50%, -50%);
+    color: rgb(31, 30, 30);
+    width: 90%;
+    padding: 20px;
+    text-align: center;
+    -moz-user-select: none;
+    user-select: none;
+}
+#overlay-layer {
+    position: absolute;
+    z-index: 1000;
+    cursor: grab;
+}
+
+.lineImg {
+    width: 96%;
+    height: 20px;
+    background-color: #fff;
+    border: 0;
+    margin: 5% 0;
+    border-radius: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    background: #37bff3 url(../img/pattern.webp);
+    background-size: 50px;
+    border: 4px solid #000;
 }
