--- a/이재혁2/assets/css/style.css
+++ b/이재혁2/assets/css/style.css
@@ -183,3 +183,78 @@ body {
     transform: translateY(-50%);
     white-space: nowrap;
 }
+
+/* section2 */
+#section2 {
+    width: 101vw;
+    height: 101vh;
+    position: absolute;
+    display: flex;
+    top: calc(50% - 50vh);
+    bottom: calc(50% - 50vh);
+    left: calc(50% - 50vw);
+    right: calc(50% - 50vw);
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    scale: 1;
+    background-color: #000;
+}
+.section2__border {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+.section2__border::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    outline: 1px solid var(--white);
+}
+
+.section2__contents {
+    width: 100%;
+    height: 100%;
+}
+.section2__contents .about {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.section2__contents .about > div {
+    width: 33.3333333%;
+    border: 1px solid #fff;
+    margin: 6px;
+    height: calc(100% - 12px);
+    background-color: #000;
+}
+.section2__contents .about > div:nth-child(1) {
+    background-image: url(https://images.unsplash.com/photo-1698945926770-ed14a9075bdd?q=80&w=3387&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-size: cover;
+    background-position: center;
+}
+.section2__contents .about > div:nth-child(2) {
+    margin-left: 0;
+}
+.section2__contents .about > div:nth-child(3) {
+    margin-left: 0;
+}
+.section2__contents .about > div h2 {
+    color: #fff;
+    font-family: "maruBuri";
+    padding: 5%;
+    text-align: center;
+    word-break: keep-all;
+}
