--- a/강서연/assets/css/style.css
+++ b/강서연/assets/css/style.css
@@ -105,12 +105,21 @@ body {
 #contents .nav {
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: 20px;
     z-index: 100;
     width: 100%;
     height: 20vh;
     background-color: #00000067;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(40px);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+}
+#contents .nav ul {
+    display: flex;
+    gap: 10px;
+    padding: 10px;
+}
+#contents .nav li {
+    font-size: 30px;
 }
 
 .music-veiw {
@@ -257,4 +266,90 @@ body {
 }
 .mt10 {
     margin-top: 10px;
+}
+
+.lineWrap {
+    position: relative;
+    background-color: rgba(255, 255, 255, 0.05);
+    width: 80px;
+    height: 80px;
+    color: rgba(255, 255, 255, 0.8);
+    font-family: "Dosis";
+    text-align: center;
+    line-height: 80px;
+}
+.lineWrap:hover {
+    background-color: rgba(255, 255, 255, 0.11);
+}
+.lineWrap .line {
+    position: absolute;
+}
+.lineWrap .line.topLeft {
+    left: 0;
+    top: 6px;
+    width: 1px;
+    height: calc(100% - 12px);
+    background-color: rgba(255, 255, 255, 0.1);
+    position: absolute;
+}
+.lineWrap .line.topLeft::before {
+    content: "";
+    width: 3px;
+    height: 3px;
+    background-color: rgba(255, 255, 255, 0.1);
+    position: absolute;
+    left: 0;
+    top: -6px;
+}
+.lineWrap .line.topRight {
+    left: 6px;
+    top: 0;
+    width: calc(100% - 12px);
+    height: 1px;
+    background-color: rgba(255, 255, 255, 0.1);
+    position: absolute;
+}
+.lineWrap .line.topRight::before {
+    content: "";
+    width: 3px;
+    height: 3px;
+    background-color: rgba(255, 255, 255, 0.1);
+    position: absolute;
+    left: auto;
+    right: -6px;
+}
+.lineWrap .line.botLeft {
+    left: 6px;
+    top: auto;
+    bottom: 0px;
+    width: calc(100% - 12px);
+    height: 1px;
+    background-color: rgba(255, 255, 255, 0.1);
+    position: absolute;
+}
+.lineWrap .line.botLeft::before {
+    content: "";
+    width: 3px;
+    height: 3px;
+    background-color: rgba(255, 255, 255, 0.1);
+    position: absolute;
+    left: -6px;
+    bottom: 0px;
+}
+.lineWrap .line.botRight {
+    right: 0;
+    top: 6px;
+    width: 1px;
+    height: calc(100% - 12px);
+    background-color: rgba(255, 255, 255, 0.1);
+    position: absolute;
+}
+.lineWrap .line.botRight::before {
+    content: "";
+    width: 3px;
+    height: 3px;
+    background-color: rgba(255, 255, 255, 0.1);
+    position: absolute;
+    right: 0;
+    bottom: -6px;
 }
