--- a/박정민/assets/css/reset.css
+++ b/박정민/assets/css/reset.css
@@ -1,5 +1,5 @@
 @import url("https://websfont.github.io/websfont/websfont.css");
-
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @font-face {
     font-family: "gmarket";
     font-weight: 300;
