--- a/박정민/assets/css/style2.css
+++ b/박정민/assets/css/style2.css
@@ -50,10 +50,10 @@
 
 /* section2 */
 #section2 {
-    height: 200vh;
     background-color: #10376b;
     position: relative;
     overflow: hidden;
+    padding-bottom: 30vh;
 }
 #section2 .title {
     font-family: "SwisspoTrial-CondensedLight";
@@ -89,12 +89,15 @@
 }
 #section2 .about1 div p {
     margin-bottom: 10px;
+    font-family: "nanumSquareNeo";
+    font-size: 16px;
+    line-height: 1.6;
 }
 #section2 .about1 div .img {
     width: 460px;
     height: 600px;
     background-color: #ccc;
-    margin-top: 20px;
+    margin-top: 5%;
     border-radius: 20px;
     overflow: hidden;
     position: relative;
@@ -125,23 +128,141 @@
     margin-top: 40px;
 }
 #section2 .about1 div .skill ul {
-    border-top: 1px solid #fff;
+    border-top: 1px solid #ffffff88;
     padding-top: 5px;
     margin-top: 15px;
 }
 #section2 .about1 div .skill li {
     display: flex;
     justify-content: space-between;
-    padding: 2px 10px;
+    padding: 2px 0;
 }
 #section2 .about1 div .skill li span:nth-child(1) {
     text-transform: uppercase;
     flex: 1;
+    font-family: "nanumSquareNeo";
+    font-size: 14px;
 }
 #section2 .about1 div .skill li span:nth-child(2) {
     flex: 1;
+    font-family: "nanumSquareNeo";
 }
 #section2 .about1 div .skill li span:nth-child(3) {
     flex: 1;
     text-align: right;
+    font-family: "nanumSquareNeo";
+    font-weight: 300;
+}
+
+#section3 {
+    background: #e0dcd8;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
+#section3 .title {
+    font-family: "SwisspoTrial-CondensedLight";
+    font-size: 30vw;
+    color: #10376b;
+    padding-left: 5vw;
+    padding-top: 14vw;
+}
+
+#section3 .subTitle {
+    position: absolute;
+    left: 5%;
+    bottom: 5%;
+    z-index: 1000;
+    font-family: "PartizenoRegular";
+    font-size: 6vw;
+    line-height: 1;
+    width: 40%;
+}
+
+#section3 .desc {
+    position: absolute;
+    right: 5%;
+    top: 5%;
+    width: 30%;
+    font-family: "nanumSquareNeo";
+}
+#section3 .desc p {
+    margin-bottom: 10px;
+}
+
+#section4 {
+    background-color: #0d59d0;
+    height: 2000px;
+}
+
+#section5 {
+    background-color: #222;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+.sec5-title {
+    width: 700px;
+    margin-left: 10vw;
+    margin-top: 50px;
+    display: flex;
+}
+.sec5-title .left {
+    width: 50%;
+    height: 100%;
+}
+.sec5-title .left .t1 {
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 900;
+    color: rgb(250, 68, 68);
+    font-size: 400px;
+    line-height: 0.7;
+}
+.sec5-title .left .t2 {
+    font-size: 145px;
+    line-height: 0.8;
+    color: #fff;
+}
+.sec5-title .left .t3 {
+    font-size: 145px;
+    line-height: 0.8;
+    color: #fff;
+}
+.sec5-title .right .r1 {
+    font-size: 145px;
+    line-height: 0.8;
+    color: #fff;
+    font-family: "Bebas Neue", sans-serif;
+    text-transform: uppercase;
+    margin-top: -30px;
+}
+.sec5-title .right .r2 {
+    font-size: 145px;
+    line-height: 0.8;
+    font-family: "Bebas Neue", sans-serif;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    color: #fff;
+}
+.sec5-title .right .r3 {
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 900;
+    color: rgb(250, 68, 68);
+    font-size: 400px;
+    line-height: 0.68;
+}
+.sec5-title > div span {
+    display: block;
+    font-family: "Bebas Neue", sans-serif;
+}
+#section5 .desc {
+    position: absolute;
+    right: 5%;
+    top: 5%;
+    width: 45%;
+    text-align: right;
+    font-family: "nanumSquareNeo";
+    color: #d2d2d2;
 }
