--- a/김진우/assets/css/style.css
+++ b/김진우/assets/css/style.css
@@ -2,6 +2,7 @@ body {
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    background-color: #000;
 }
 #header {
     position: fixed;
@@ -47,6 +48,18 @@ body {
 
 #header .time em {
     font-weight: bold;
+}
+
+#header .login {
+    border: 1px solid #ffffff66;
+    font-size: 12px;
+    padding: 2px 10px;
+    border-radius: 30px;
+    color: #ffffff74;
+    font-family: "GmarketSans";
+    text-transform: lowercase;
+    font-weight: 400;
+    margin-left: 10px;
 }
 
 #mainIntro {
@@ -301,12 +314,13 @@ body {
     z-index: 1000;
 }
 .portlayer .port .c1 nav ul {
-    padding: 40px;
+    padding: 50px 40px 40px 40px;
 }
 .portlayer .port .c1 nav li {
-    font-family: '"nanumSquareNeo"';
+    font-family: "nanumSquareNeo";
     font-size: 16px;
     text-transform: capitalize;
+    padding: 3px 0;
 }
 .portlayer .port .c1 nav li input {
     width: 10px;
@@ -338,6 +352,7 @@ body {
 .portlayer .port .c2 .cont .left li {
     background-color: #ffffff0a;
     padding: 7px 14px 5px;
+    font-size: 14px;
 }
 .portlayer .port .c2 .cont .left li:nth-child(even) {
     background-color: #00000048;
@@ -349,8 +364,12 @@ body {
 
 .portlayer .port .c2 .cont .right .img {
     border: 1px solid #cccccc2d;
-    height: 300px;
+    height: 160px;
     margin: 10px;
+    background-image: url(../img/KIM_FOX01.png);
+    background-position: center top -50px;
+    background-size: 200%;
+    background-repeat: no-repeat;
 }
 .portlayer .port .c2 .cont .right p {
     margin: 10px;
@@ -361,7 +380,19 @@ body {
     text-align: center;
     border: 1px solid #cccccc2d;
     padding: 7px;
-    margin-left: 10px;
+    width: 30px;
+    height: 30px;
+}
+.portlayer .port .c2 .cont .right .detail {
+    width: 30px;
+    height: 30px;
+    display: block;
+    border-radius: 50%;
+    margin: auto;
+}
+.portlayer .port .c2 .cont .right .detail img {
+    width: 100%;
+    height: 100%;
 }
 
 /* youtube */
