--- a/안지은/assets/css/style2.css
+++ b/안지은/assets/css/style2.css
@@ -108,12 +108,43 @@
     align-items: flex-start;
     justify-content: flex-end;
     flex-direction: column;
+    margin-bottom: 100px;
 }
-.sec2__inner .article2 .right h3 {
+.sec2__inner .article1 .right h3 {
+    font-family: "Italiana";
+    font-size: 40px;
 }
-.sec2__inner .article2 .right p {
+.sec2__inner .article1 .right p {
+    font-family: "nanumSquareNeo";
+    color: #666;
+    font-size: 14px;
+    line-height: 1.6;
 }
-.sec2__inner .article2 .right a {
+.sec2__inner .article1 .right a {
+    font-family: "Abel";
+    padding: 10px 0 0 40px;
+    border-bottom: 1px solid #666;
+}
+
+@media (max-width: 960px) {
+    .sec2__inner .article1 .right p br {
+        display: none;
+    }
+}
+@media (max-width: 960px) {
+    .sec2__inner h2 {
+        font-size: 80px;
+        margin-bottom: -40px;
+    }
+    .sec2__inner .article1 {
+        flex-direction: column;
+    }
+    .sec2__inner .article1 .left {
+        width: 100%;
+    }
+    .sec2__inner .article1 .right {
+        width: 100%;
+    }
 }
 
 .sec2__inner .article2 {
