--- a/김혜지/assets/css/style2.css
+++ b/김혜지/assets/css/style2.css
@@ -69,15 +69,32 @@
         transform: translateY(-10px);
     }
 }
-
-#section1 .bar {
+.bar {
     width: 100%;
     height: 80px;
+    line-height: 70px !important;
+    font-size: 30px !important;
+    font-family: "yache" !important;
+    text-align: center;
+}
+.bar.sec1 {
     background-color: #37bff3;
-    position: absolute;
-    z-index: 1000;
+    position: sticky;
     left: 0;
-    bottom: 0;
+    top: 0;
+    z-index: 1000;
+    border-top: 4px solid #000;
+    border-bottom: 4px solid #000;
+}
+
+.bar.sec3 {
+    width: 100%;
+    height: 80px;
+    background-color: #a564a8;
+    position: sticky;
+    left: 0;
+    top: 0;
+    z-index: 1000;
     border-top: 4px solid #000;
     border-bottom: 4px solid #000;
 }
@@ -135,9 +152,9 @@
 #section2 {
     background-color: #fcd8da;
     width: 100%;
-    height: 3000px;
     padding-top: 80px;
     position: relative;
+    margin-top: -160px;
 }
 #section2 > div {
     font-size: 10vw;
@@ -146,8 +163,10 @@
     font-family: "Bebas Neue", sans-serif;
     text-transform: uppercase;
     margin-bottom: 10px;
-    padding-top: 1vw;
     padding-left: 1vw;
+}
+#section2 .dd {
+    margin-top: 80px;
 }
 #section2 > div .box1 {
     width: 24vw;
@@ -220,6 +239,7 @@
     margin-top: 4vw;
     text-align: center;
     font-size: 26px;
+    padding-bottom: 200px;
 }
 
 #section2 .desc em {
@@ -283,4 +303,89 @@
     background: #37bff3 url(../img/pattern.webp);
     background-size: 50px;
     border: 4px solid #000;
+}
+
+/* section3 */
+#section3 {
+    height: 3000px;
+    background-color: #ff99c8;
+}
+#section3 .title {
+    text-align: center;
+    font-family: "lotteriaChab";
+    text-transform: uppercase;
+    color: #fff;
+    -webkit-text-stroke: 2px #fff;
+    font-size: 8vw;
+    padding: 10vw 0;
+}
+
+#section3 .skillWrap {
+    width: 1200px;
+    margin: 0 auto;
+}
+
+#section3 .skillWrap .skill {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+}
+#section3 .skillWrap .skill:nth-child(even) {
+    flex-direction: row-reverse;
+}
+
+#section3 .skillWrap .skill:nth-child(even) .right {
+    text-align: right;
+}
+
+#section3 .skillWrap .skill .left {
+    width: 50%;
+}
+#section3 .skillWrap .skill .left .img {
+    width: 100%;
+    aspect-ratio: 1/1;
+    background-image: url("https://images.unsplash.com/photo-1522202176988-66273c2fd55f?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 50%;
+    border: 8px solid #fff;
+    box-shadow: 0 0 0 6px #8181815b;
+    position: relative;
+}
+#section3 .skillWrap .skill:nth-child(2) .left .img {
+    background-image: url("https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+}
+
+#section3 .skillWrap .skill .left .img span {
+    font-size: 100px;
+    font-family: "gmarket";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-weight: 100;
+}
+#section3 .skillWrap .skill .right {
+    width: 45%;
+    position: relative;
+}
+
+#section3 .skillWrap .skill .right h3 {
+    font-family: "Bebas Neue", sans-serif;
+    text-transform: uppercase;
+    font-size: 60px;
+}
+#section3 .skillWrap .skill .right p {
+    font-family: "yache";
+    font-size: 22px;
+}
+#section3 .skillWrap .skill .icon {
+    width: 200px;
+    position: absolute;
+    left: 50%;
+    top: 20%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
 }
